--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -306,14 +306,13 @@ input, button, select, optgroup, textarea {
 }
 
 .form-container .form-header {
-  display: flex;
   position: fixed;
-  width: 100vw;
-  height: 3.125rem;
-  align-items: center;
   top: 0;
   left: 0;
   right: 0;
+  height: 3.125rem;
+  display: flex;
+  align-items: center;
   font-size: 1rem;
   font-weight: 500;
   color: #ffffff;
@@ -397,15 +396,17 @@ input, button, select, optgroup, textarea {
 
 .form-container .form-properties {
   position: fixed;
-  top: calc(3.125rem + 2.5rem);
+  top: 3.125rem;
   right: 0;
   bottom: 0;
+  width: 18.75rem;
+  overflow-y: auto;
+  top: calc(3.125rem + 2.5rem);
   width: 18.75rem;
   background-color: #ffffff;
   border-left: 0.0625rem solid #EBEBEB;
   box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.15);
   overflow-x: hidden;
-  overflow-y: auto;
   -ms-overflow-style: none;
   /* IE and Edge */
   scrollbar-width: none;
