--- a/src/main/resources/public/src/scss/form/form.scss
+++ b/src/main/resources/public/src/scss/form/form.scss
@@ -22,7 +22,7 @@
 @import '_scrollbars.scss';
 @import '_file-uploader.scss';
 @import '_date-picker.scss';
-@import "_text-editor.scss";
+@import '_text-editor.scss';
 @import '_color-picker.scss';
 @import '_thumbnail.scss';
 @import '_tooltip.scss';
