--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -337,3 +337,9 @@ $alert-border:                               solid $alert-border-size $line-gray
 $alert-margin-size:                          0.3125rem;  // 5px
 $alert-box-sizing:                           border-box;
 $alert-box-shadow:                           0 0 $alert-margin-size $alert-margin-size rgba(116, 147, 179, 0.25);
+
+///////////////////////////// color-picker //////////////////////////
+$color-picker-color-size:                    1.75rem;    // 28px
+$color-picker-box-size:                      2.5rem;     // 40px
+$color-picker-margin:                        0.3125rem;  // 5px
+$color-picker-palette-margin:                0.625rem;   // 10px
