--- a/src/main/resources/public/src/scss/theme/default/_colorpicker.scss
+++ b/src/main/resources/public/src/scss/theme/default/_colorpicker.scss
@@ -1,2 +1,8 @@
 // Color Palette for ITSM
 @import "../../template/_color-picker.scss";
+
+.color-picker {
+    .color-palette {
+        @include color-palette();
+    }
+}
