--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -5824,7 +5824,7 @@ span.vertical-bar {
 .color-picker .color-input .selected-color {
   width: 1.75rem;
   height: 1.75rem;
-  margin: auto;
+  margin: 0.3125rem;
   cursor: pointer;
 }
 
@@ -5832,20 +5832,23 @@ span.vertical-bar {
   width: 2.5rem;
   height: 2.5rem;
   margin-right: 0.3125rem;
-  border: 0.0625rem solid #EBEBEB;
-  cursor: pointer;
+  border: 0.0625rem solid #ebebeb;
   display: flex;
+}
+
+.color-picker .color-input .selected-color-box:hover {
+  border: 0.0625rem solid #0098ff;
 }
 
 .color-picker .color-palette {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  background-color: #ffffff;
+  background-color: #fff;
   width: 30rem;
   margin-top: 0.3125rem;
   padding: 1.25rem 0 0.625rem 1.25rem;
-  border: 0.0625rem solid #EBEBEB;
+  border: 0.0625rem solid #ebebeb;
 }
 
 .color-picker .color-palette div {
@@ -5859,7 +5862,7 @@ span.vertical-bar {
 
 .color-picker .color-palette div.selected {
   border: 0.375rem solid white;
-  outline: 0.063rem solid #0098FF;
+  outline: 0.063rem solid #0098ff;
 }
 
 .help-tooltip {
