--- a/src/main/resources/public/src/scss/template/_color-picker.scss
+++ b/src/main/resources/public/src/scss/template/_color-picker.scss
@@ -12,42 +12,141 @@
     .color-input {
         display: inline-flex;
         .selected-color {
-            width: 1.75rem; // 28px
-            height: 1.75rem; // 28px
-            margin: auto;
+            width: $color-picker-color-size;
+            height: $color-picker-color-size;
+            margin: $color-picker-margin;
+            border: 0.1875rem solid #68717c;
             cursor: pointer;
             &-box {
-                width: 2.5rem; // 40px
-                height: 2.5rem; // 40px
-                margin-right: 0.3125rem; // 5px
+                width: $color-picker-box-size;
+                height: $color-picker-box-size;
+                margin-right: $color-picker-margin;
                 border: 0.0625rem solid $line-gray;
-                cursor: pointer;
                 display: flex;
+                &:hover {
+                    border: 0.0625rem solid $point-blue; // 1px
+                }
             }
         }
     }
-    .color-palette {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        background-color: $white;
-        width: 30rem; // 482px
-        margin-top: 0.3125rem; // 5px
-        padding: 1.25rem 0 0.625rem 1.25rem; // 20px 10px 20px;
-        border: 0.0625rem solid $line-gray;
-        & div {                          // 컬러 팔레트 내부의 색상표 박스 디자인
-            display: inline-block;
-            width: 2.5rem; // 40px
-            height: 2.5rem; // 40px
-            margin-right: 0.625rem; // 10px;
-            margin-bottom: 0.625rem; // 10px;
-            cursor: pointer;
-            &.selected {
-                border: 0.375rem solid white; // 6px
-                outline: 0.063rem solid $point-blue; // 1px
-            }
+}
+
+@mixin color-palette() {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    background-color: $white;
+    width: 30rem; // 480px
+    margin-top: $color-picker-margin;
+    padding: 1.25rem 0 0.625rem 1.25rem; // 20px 10px 20px;
+    border: 0.0625rem solid $line-gray;
+    & div {                          // 컬러 팔레트 내부의 색상표 박스 디자인
+        display: inline-block;
+        width: $color-picker-box-size;
+        height: $color-picker-box-size;
+        margin-right: $color-picker-palette-margin; // 10px;
+        margin-bottom: $color-picker-palette-margin; // 10px;
+        cursor: pointer;
+        &.selected {
+            border: 0.375rem solid white; // 6px
+            outline: 0.063rem solid $point-blue; // 1px
         }
     }
-    .color-palette-opacity {
+}
+
+@mixin min-color-palette() {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    background-color: $white;
+    width: 100%;
+    margin-top: 0.188rem; // 3px
+    border: 0.0625rem solid $line-gray;
+    padding: 0.9375rem 0 0.9375rem 0.9375rem; // 15px 0 15px 15px
+    & div {
+        display: inline-block;
+        width: 1rem; // 16px
+        height: 1rem; // 16px
+        margin: 0.1875rem; // 3px
+        cursor: pointer;
+        &:last-child { border: 0.0625rem solid $line-gray; }
+        &.selected {
+            border: 0.125rem solid #ffffff; // 2px
+            outline: 0.063rem solid $point-blue; // 1px
+        }
+    }
+}
+
+@mixin opacity() {
+    background-color: $white;
+    width: 100%;
+    border: 0.0625rem solid $line-gray; // 1px
+    border-top: none;
+    padding-left: 0.219rem; // 3.5px
+    display: none;
+    height: 2.5rem; // 40px
+    span {
+        display: table-cell;
+        vertical-align: middle;
+
+        input {
+            vertical-align: middle;
+            width: 1.875rem; // 30px
+            height: 1.25rem; // 20px
+        }
+
+        input[type=range] {
+            -webkit-appearance: none;
+
+            &::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                width: 0.625rem; // 10px
+                height: 0.625rem; // 10px
+                border: 0.0625rem solid #c8ced8;
+                border-radius: 50%;
+                background: #ffffff;
+                cursor: pointer;
+            }
+
+            &::-moz-range-thumb {
+                width: 0.625rem; //10px
+                height: 0.625rem;
+                border: 0.0625rem solid #c8ced8;
+                border-radius: 50%;
+                background: #ffffff;
+                cursor: pointer;
+            }
+
+            &::-moz-range-progress {
+                background-color: $point-blue;
+                height: 0.0625rem; // 1px
+            }
+        }
+
+        input.slide-object {
+            width: 7.625rem;
+            height: 0.0625rem; // 1px
+            background: #c8ced8;
+            border: initial;
+            padding: initial;
+            outline: none;
+            margin: {
+                left: 0.594rem; // 9.5px
+                right: 0.625rem; // 10px
+            }
+        }
+
+        input.slide-input {
+            width: 3rem; // 48px
+            text-align: center;
+        }
+
+        label {
+            margin: 0 0 0 0.25rem; // 4px
+            width: 0.813rem; // 13px
+            height: 1.25rem; // 20px
+            line-height: 1.25rem; // 20px
+            vertical-align: middle;
+        }
     }
 }
