--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -112,18 +112,23 @@
             avatarImage.className = 'profile-photo';
             avatarImage.src = data.avatarPath;
             avatarImage.alt = 'profile pic';
-            avatarImage.onclick = function() {
-                location.href = '/users/' + data.userKey + '/edit';
-            }
             tdAvatar.appendChild(avatarImage);
 
             let tdName = document.createElement('td');
             tdName.style.width = '10%';
             tdName.innerText = data.userName;
+            tdName.style.cursor = 'pointer';
+            tdName.onclick = function() {
+                location.href = '/users/' + data.userKey + '/edit';
+            };
 
             let tdId = document.createElement('td');
             tdId.style.width = '10%';
             tdId.innerText = data.userId;
+            tdId.style.cursor = 'pointer';
+            tdId.onclick = function() {
+                location.href = '/users/' + data.userKey + '/edit';
+            };
 
             let tdEmail = document.createElement('td');
             tdEmail.style.width = '20%';
