--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -113,6 +113,7 @@ $label-font-size:                             $font-size-base;
 $label-font-weight:                           $font-weight-medium;
 
 // table
+$table-th-font-size:                          1.125rem; // 18px
 $table-th-font-weight:                        $font-weight-medium;
 
 // button, a
