--- a/src/main/resources/public/template/layout/popupLayout.html
+++ b/src/main/resources/public/template/layout/popupLayout.html
@@ -7,8 +7,10 @@
     <th:block layout:fragment="scriptLink"></th:block>
 </head>
 <body>
-    <div class="container-popup">
-        <th:block layout:fragment="content"></th:block>
+    <div class="alice-wrapper">
+        <div class="popup">
+            <th:block layout:fragment="content"></th:block>
+        </div>
     </div>
 <th:block layout:fragment="pageScript"></th:block>
 </body>
