--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -122,6 +122,18 @@ input, button, select, optgroup, textarea {
   vertical-align: text-top;
 }
 
+.float-clear {
+  clear: both;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
 /* _flex.scss
  *
  * 파일 경로 : template/_flex.scss
@@ -334,6 +346,10 @@ input, button, select, optgroup, textarea {
   padding: 8.438rem 0 0.9375rem 0;
 }
 
+.document-container .document-main .document-main-header .numbering-content label {
+  color: #ACB4BF;
+}
+
 .document-container .document-main .drawing-board {
   display: table;
   width: 60rem;
@@ -409,6 +425,10 @@ input, button, select, optgroup, textarea {
 
 .document-container .token-properties .token-info-contents .token-history {
   height: 100%;
+}
+
+.document-container .token-properties .token-info-contents .token-history .table {
+  width: 100%;
 }
 
 .document-container .token-properties .token-info-contents .token-history .table thead {
@@ -796,6 +816,7 @@ table tr {
 }
 
 table tr th {
+  font-size: 1.125rem;
   font-weight: 500;
 }
 
@@ -1084,9 +1105,41 @@ label {
   border-color: #0098FF;
 }
 
+/* 태그 기능 디자인
+ * /document/_tag.scss
+ * 라이브러리인 /vendor/tagify/tagify.css 를 재정의하여 디자인함
+ */
 .tagify {
-  height: 54px;
-  padding-left: 5px;
+  height: 3.375rem;
+  padding-left: 0.3125rem;
+}
+
+.tagify tag {
+  margin: 0.625rem 0 0.625rem 0.3125rem;
+}
+
+.tagify tag div {
+  color: #0098FF;
+  border-radius: 0.0625rem;
+  padding: 0.375rem 0.5rem;
+}
+
+.tagify tag div::before {
+  box-shadow: 0 0 0 1.25rem rgba(0, 152, 255, 0.1) inset;
+}
+
+.tagify tag div span {
+  height: 1.25rem;
+}
+
+.tagify tag div:hover::before {
+  color: #0098FF;
+  box-shadow: 0 0 0 1.25rem rgba(0, 152, 255, 0.1) inset !important;
+}
+
+.tagify tag:hover div::before {
+  color: #0098FF;
+  box-shadow: 0 0 0 1.25rem rgba(0, 152, 255, 0.1) inset !important;
 }
 
 .tagify .tagify__tag__removeBtn {
@@ -1095,51 +1148,37 @@ label {
 }
 
 .tagify .tagify__tag__removeBtn:hover {
+  color: #ffffff;
   background-color: #FF405A;
 }
 
-.tagify .tagify__tag__removeBtn:hover div {
+.tagify .tagify__tag__removeBtn:hover + div {
   color: #FF405A;
 }
 
-.tagify .tagify__tag__removeBtn:hover div::before {
-  box-shadow: 0 0 0 1.1em rgba(255, 64, 90, 0.1) inset;
+.tagify .tagify__tag__removeBtn:hover + div::before {
+  box-shadow: 0 0 0 1.25rem rgba(255, 64, 90, 0.1) inset !important;
 }
 
-.tagify .tagify__tag--editable div {
-  color: #FF405A;
+.tagify .tagify--notAllowed:not(.tagify__tag--editable) .tagify__tag__removeBtn {
+  color: #FF405A !important;
 }
 
-.tagify .tagify__tag--editable.tagify--invalid div::before {
-  box-shadow: 0 0 0 1.1em rgba(255, 64, 90, 0.1) inset;
+.tagify .tagify--notAllowed:not(.tagify__tag--editable) div {
+  color: #FF405A !important;
 }
 
-.tagify .tagify__tag--editable div {
-  color: #FF405A;
+.tagify .tagify--notAllowed:not(.tagify__tag--editable) div::before {
+  box-shadow: 0 0 0 1.25rem rgba(255, 64, 90, 0.1) inset !important;
 }
 
-.tagify tag {
-  margin: 10px 0 10px 5px;
-}
-
-.tagify tag div {
-  color: #0098FF;
-  border-radius: 0.0625rem;
-  padding: 8px;
-}
-
-.tagify tag div::before {
-  box-shadow: 0 0 0 20px rgba(0, 152, 255, 0.1) inset;
-}
-
-.tagify tag div:hover::before {
-  color: #0098FF;
-  box-shadow: 0 0 0 20px rgba(0, 152, 255, 0.1) inset;
+.tagify .tagify--notAllowed:not(.tagify__tag--editable) div span {
+  opacity: 1;
 }
 
 .tagify .tagify__input {
-  margin: 10px 5px;
-  padding: 7px;
+  margin: 0.625rem 0.3125rem;
+  padding: 0.4375rem;
   white-space: pre-line;
 }
 
@@ -1150,27 +1189,19 @@ label {
  * @author wdj
  * @version 1.0
  */
-.print-container {
+.print {
   width: 100vw;
   height: 100vh;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
-.print-container *:focus {
-  outline: none !important;
-}
-
-.print-container .contents {
-  display: flex;
-  flex-direction: column;
-  left: 0;
-  float: left;
+.print .print-main {
   min-width: 100vw;
   height: 100vh;
   min-height: 100vh;
-  padding: 0;
   margin: 0;
+  padding: 0;
   overflow: auto;
   -ms-overflow-style: none;
   /* IE and Edge */
@@ -1178,104 +1209,51 @@ label {
   /* Firefox */
 }
 
-.print-container .contents::-webkit-scrollbar {
+.print .print-main::-webkit-scrollbar {
   display: none;
   /* Chrome, Safari, Opera*/
 }
 
-.print-container .contents .print-area {
-  justify-content: center;
-}
-
-.print-container .contents .print-board {
+.print .print-main .print-main-header {
+  width: 100vw;
   margin: 0.9375rem;
-  height: 4.5rem;
 }
 
-.print-container .contents .print-board span {
-  float: right;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  color: #000000;
-  text-align: right;
+.print .print-main .print-main-header span {
+  line-height: 1.2;
 }
 
-.print-container .contents .drawing-board {
-  margin: 0 auto;
-  display: table;
-  width: 60rem;
-  max-width: 60rem;
+.print .print-main .print-area {
   min-height: 100%;
-  padding: 6.25rem 4.063rem;
+}
+
+.print .print-main .drawing-board {
+  display: table;
+  width: 710px;
+  min-height: 100%;
+  margin: 0.9375rem;
+  padding: 6.25rem 4.688rem;
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
 }
 
-.print-container .contents .drawing-board .component {
-  page-break-inside: avoid;
+.print .print-main .drawing-board *:focus {
+  outline: none !important;
 }
 
-.print-btn {
-  margin: 0.625rem;
-  text-align: right;
+.print .print-main .drawing-board .component {
+  page-break-inside: always;
 }
 
-.print-hr {
-  border-top: 1px solid;
+.print .print-main .drawing-board .component:hover .move-handler {
+  opacity: 0;
 }
 
-.print-header {
-  margin: 0.9375rem 3.75rem;
-  height: 45px;
-}
-
-.print-header span {
-  float: right;
-  text-align: right;
-}
-
-.print-body .component {
-  page-break-inside: avoid;
-}
-
-.print-body .component .group {
-  pointer-events: none;
-}
-
-.print-history {
-  margin: 0.9375rem 3.75rem;
-}
-
-.comment {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  max-width: 100%;
-  border: none;
-  padding: 0.625rem 1.25rem;
-  background-color: #ffffff;
-}
-
-.comment .field {
-  display: flex;
-  height: 3.563rem;
-}
-
-.comment .field textarea {
-  width: 100%;
-  resize: vertical;
-}
-
-.comment .field button {
-  flex: 1 1 auto;
-  line-height: 1rem;
-  padding: 0 0.625rem;
-  white-space: nowrap;
-}
-
-.table {
-  width: 100%;
-  margin-bottom: 1rem;
+@media print {
+  body {
+    width: 21cm;
+    height: 29.7cm;
+    margin: 30mm 45mm 30mm 45mm;
+  }
 }
