--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -122,6 +122,18 @@ input, button, select, optgroup, textarea {
   vertical-align: text-top;
 }
 
+.float-clear {
+  clear: both;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
 /* _common.scss 
  *
  * 파일 경로 : template/_common.scss
@@ -1836,6 +1848,7 @@ table tr {
 }
 
 table tr th {
+  font-size: 1.125rem;
   font-weight: 500;
 }
 
@@ -3026,10 +3039,12 @@ button.ghost-line:disabled .icon {
   color: #ffffff;
   font-weight: 500;
   padding: 0 1.25rem;
-  display: flex;
   position: fixed;
-  width: 100vw;
+  top: 0;
+  left: 0;
+  right: 0;
   height: 3.125rem;
+  display: flex;
   align-items: center;
 }
 
