--- a/src/main/resources/public/src/scss/template/_alignments.scss
+++ b/src/main/resources/public/src/scss/template/_alignments.scss
@@ -8,14 +8,25 @@
 
 $text-align-type: (center, left, right);
 @each $direction in $text-align-type {
-    .align-#{$direction} {
-        text-align: #{$direction};
-    }
+  .align-#{$direction} {
+    text-align: #{$direction};
+  }
 }
 
 $vertical-align-type: (baseline, top, middle, bottom, text-bottom, text-top);
 @each $direction in $vertical-align-type {
-    .align-#{$direction} {
-        vertical-align: #{$direction};
+  .align-#{$direction} {
+    vertical-align: #{$direction};
+  }
+}
+
+$float-align-type: (clear, left, right);
+@each $direction in $float-align-type {
+  .float-#{$direction} {
+    @if $direction == 'clear' {
+      clear: both;
+    } @else {
+      float: #{$direction};
     }
+  }
 }
