--- a/src/main/resources/public/template/token/tokenPopUp.html
+++ b/src/main/resources/public/template/token/tokenPopUp.html
@@ -7,15 +7,14 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="edit">
+    <div class="related-instance-header">
         <h3 class="under-bar" th:text="#{token.label.relatedInstance}"></h3>
-        <input class="search col-3" type="text" name="search" id="search"
+    </div>
+    <div class="related-instance-main">
+        <input class="search col-5" type="text" name="search" id="search"
                th:placeholder="#{token.label.searchPlaceholder}"/>
+        <button class="point-fill float-right" th:text="#{common.btn.add}" onclick="onSave();"></button>
         <div class="table-set" id="instanceList"></div>
-        <div class="horizontal-bar"></div>
-        <div class="btn-bar">
-            <button class="point-fill" th:text="#{common.btn.add}" onclick="onSave();"></button>
-        </div>
     </div>
 </th:block>
 <th:block layout:fragment="pageScript">
@@ -33,13 +32,14 @@
         function getInstanceList(search, showProgressbar) {
             restSubmit('get', '/tokens/view-pop/list?searchValue=' + search.trim() + '&tokenId=' + '[[${tokenId}]]', function(result) {
                 document.getElementById('instanceList').innerHTML = result;
-                document.getElementById('instanceTable').style.width = '100%';
                 let instanceDtEle = document.querySelectorAll('td[name=instanceDt]');
                 for (let i = 0; i < instanceDtEle.length; i++) {
                     if (instanceDtEle[i].textContent !== '') {
                         instanceDtEle[i].textContent = i18n.userDateTime(instanceDtEle[i].textContent);
                     }
                 }
+                // 스크롤바
+                OverlayScrollbars(document.querySelector('.list-body'), { className: 'scrollbar' });
             }, null, showProgressbar);
         }
 
