#9234 [템플릿 SCSS] _color-picker.scss
- MR feedback

--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -2701,8 +2701,8 @@ button.ghost-line:disabled .icon {
   background-color: #ffffff;
   width: 100%;
   margin-top: 0.188rem;
-  border: 0.0625rem solid #EBEBEB;
   padding: 0.9375rem 0 0.9375rem 0.9375rem;
+  border: 0.0625rem solid #EBEBEB;
 }
 
 .process-properties-panel div.properties-container div.element-properties div.properties .color-picker .color-palette div {
@@ -2718,7 +2718,7 @@ button.ghost-line:disabled .icon {
 }
 
 .process-properties-panel div.properties-container div.element-properties div.properties .color-picker .color-palette div.selected {
-  border: 0.125rem solid #fff;
+  border: 0.125rem solid #ffffff;
   outline: 0.063rem solid #0098ff;
 }
 
