--- a/src/main/resources/public/src/scss/process/_layout.scss
+++ b/src/main/resources/public/src/scss/process/_layout.scss
@@ -573,7 +573,7 @@
                       }
                   }
 
-                  @import "_colorpicker.scss";
+                  @import "_color-picker.scss";
 
                   .script-action-container {
                       display: flex;
