--- a/src/main/resources/public/src/scss/template/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/template/_thumbnail.scss
@@ -13,7 +13,7 @@ $thumbnail-font-size: 1rem; // 16px;
 $thumbnail-font-weight: 400; // regulalr
 $thumbnail-font-color: #ACB4BF;
 $thumbnail-border-color: $line-gray;
-$thumbnail-background-color: #ffffff;
+$thumbnail-background-color: $white;
 $thumbnail-selected-border-color: $point-blue;
 $thumbnail-selected-background-color: rgba(0, 152, 255, 0.05);
 
