--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -29,7 +29,7 @@
 @import '_container.scss';
 @import '_gnb.scss';
 @import '_notification.scss';
-@import '_colorpicker.scss';
+@import '_color-picker.scss';
 @import '_tooltip.scss';
 @import '_thumbnail.scss';
 @import '_reply.scss';
