사용자정보 화면, 커스텀코드 화면 select box 적용

--- a/src/main/resources/public/src/scss/portal/_search.scss
+++ b/src/main/resources/public/src/scss/portal/_search.scss
@@ -271,7 +271,7 @@
         }
 
         &-view {
-            @include view-template()
+            @include view-template();
 
             span.vertical-bar {
                 width: 1.875rem; // 30px
