--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -150,6 +150,7 @@
                     }
                 }
             }
+            aliceJs.initDesignedSelectTag();
         }
 
         //condition 초기화
