--- a/src/main/resources/public/template/form/fragments/formHead.html
+++ b/src/main/resources/public/template/form/fragments/formHead.html
@@ -44,6 +44,10 @@
             officeNumber: '[[${#authentication.details.officeNumber}]]',
             mobileNumber: '[[${#authentication.details.mobileNumber}]]'
         }));
+
+        window.addEventListener('load', () => {
+            aliceJs.initDesignedSelectTag();
+        });
     </script>
 </th:block>
 </html>
