--- a/src/main/resources/public/template/layout/fragments/commonPortalHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonPortalHead.html
@@ -42,6 +42,10 @@
             i18n.init();
         })();
 
+        window.addEventListener('load', () => {
+            aliceJs.initDesignedSelectTag();
+        });
+
         /* ]]> */
     </script>
 </th:block>
