--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -142,5 +142,9 @@
         });
         OverlayScrollbars(document.querySelector('.simulation-report .contents'), { className: 'scrollbar' });
     };
+
+    window.addEventListener('load', () => {
+        aliceJs.initDesignedSelectTag();
+    });
 </script>
 </html>
