--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -303,6 +303,8 @@ select {
   margin: 0;
   padding: 0;
   list-style: none;
+  max-height: 25rem; // 400px
+  overflow: auto;
   color: $element-font-color;
   background-color: $element-bg-color;
   outline: 0;
@@ -313,6 +315,8 @@ select {
     margin: 0;
     padding: 0.75rem 0; // 12px
     text-indent: 0.625rem; // 10px
+    text-overflow: ellipsis;
+    white-space: nowrap;
     &:hover {
       background: rgba(0, 152, 255, 0.08); // TODO: 변수로 따로 빼야 하나?
     }
