--- a/src/main/resources/public/src/scss/template/_mixins.scss
+++ b/src/main/resources/public/src/scss/template/_mixins.scss
@@ -148,16 +148,24 @@
       display: flex;
       flex-direction: column;
       margin-top: 0.6875rem; // 11px
-      li {
-        color: $dark-gray;
-        font-weight: 400;
-        height: 1.5rem; // 24px
-      }
+
       label {
         font-weight: 500;
         margin-left: 1.25rem; // 20px
         &:first-child {
           margin-left: 0;
+        }
+      }
+      .designed-options li {
+        margin: 0;
+        padding: 0.75rem 0; // 12px
+        text-indent: 0.625rem; // 10px
+        height: 2.5rem; // 40px
+        &:hover {
+          background: rgba(0, 152, 255, 0.08); // TODO: 변수로 따로 빼야 하나?
+        }
+        &[rel="hide"] {
+          display: none;
         }
       }
       .checkbox-list {
@@ -166,6 +174,11 @@
         border-radius: $element-border-radius;
         overflow-y: auto;
         padding: 0.5rem 0.625rem; // 8px 10px
+        li {
+          color: $dark-gray;
+          font-weight: 400;
+          height: 1.5rem; // 24px
+        }
       }
       .radio-list {
         height: 27rem;
